# cloudmesh-ai-multipass

./: #todo.txt#  .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: api.md
examples/: multipass-simple.py
src/cloudmesh/ai/app/: multipass.yaml
src/cloudmesh/ai/command/: multipass.py  multipass_plugin.py  multipass_table_config.js  multipass_table_styles.css
src/cloudmesh/ai/multipass/: MultipassProvider.py
src/cloudmesh/multipass/: Deploy.py  Provider.py
src/cloudmesh/multipass/command/: multipass.py
tests/: test_multipass_basic.py  test_multipass_control.py  test_multipass_images.py  test_multipass_vm.py  test_multipass_volume.py
