[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmesh-ai-multipass"

dynamic = ["version"]
description = "Extension multipass created by CME"
license = "Apache-2.0"
dependencies = [
    "click",
    "rich",
    "pytest",
    "cloudmesh-ai-common",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.entry-points."cloudmesh.ai.command"]
multipass = "cloudmesh.multipass.command.multipass:register"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cloudmesh*"]