[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmesh-ai-multipass"

dynamic = ["version"]
description = "Extension multipass created by CME"
license = "Apache-2.0"
urls = { "Homepage" = "https://github.com/cloudmesh-ai/cloudmesh-ai-multipass" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click",
    "rich",
    "pytest",
    "cloudmesh-ai-common",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.entry-points."cloudmesh.ai.command"]
multipass = "cloudmesh.ai.command.multipass:register"

[project.entry-points."cloudmesh.ai.plugin"]
multipass = "cloudmesh.ai.command.multipass_plugin:MultipassPlugin"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cloudmesh*"]